--- a/google-translate.css
+++ b/google-translate.css
@@ -1,5 +1,8 @@
 // Don't show Google Topbar
-.goog-te-banner-frame{display:none;}
+.goog-te-banner-frame {
+    display:none !important
+}
+
 #goog-gt-tt {
   display:none!important;
   visibility:hidden!important;
@@ -9,12 +12,13 @@
   position: absolute;
   bottom: calc(53px + 16px);
   right: 16px!important;
-  // z-index: 99999;
 }
+
 .goog-te-gadget {
   font-family: Roboto, 'Open Sans', sans-serif!important;
   text-transform: uppercase;
 }
+
 .goog-te-gadget-simple  {
   background-color: rgba(255,255,255,0.20)!important;
   border: 1px solid rgba(255,255,255,0.50) !important;
@@ -26,6 +30,7 @@
   cursor: pointer;
   zoom: 1;
 }
+
 .goog-te-menu2 {
   max-width: 100%;
 }
@@ -37,12 +42,13 @@
     margin-right: 16px;
     font-size: 2rem;
     vertical-align: -10px;
-    // width:32px!important;
   } 
 }
+
 .goog-te-menu-value span:nth-child(5) {
   display:none;
 }
+
 .goog-te-menu-value span:nth-child(3) {
   border:none!important;
   font-family: 'Material Icons';
@@ -60,13 +66,14 @@
     height: 32px!important;
     width: 32px!important;
     margin-right: 8px!important;
-    //     OR
-    display: none;
 }
 
 // HIDE TOP BAR 
 .goog-te-banner-frame.skiptranslate {display: none!important;} 
-body {top: 0px!important;}
+
+body {
+    top: 0px!important;
+}
 
 // Mediaqueries
 @media (max-width: 667px) {
